refactor: fix IntelliJ warnings — inline metaSeg, dead branches, broken Javadoc refs
- Inline redundant 'metaSeg = rawMeta' temporaries across all decoders
  (Alp, AlpRd, Bitpacked, DateTimeParts, Delta, Dict×2, FOR, Fsst,
  Pco, Rle, RunEnd, Sequence, Sparse, VarBin): call Proto*.decode()
  directly on rawMeta
- DateTimePartsEncodingDecoder: drop dead validity-intersect branches
  for seconds/subseconds (non-nullable per spec; tracked #251); remove
  now-unused intersect() helper and MaterializedBoolArray import
- PcoEncodingDecoder: restructure empty deltaVariant==0 if-body to
  'else if (deltaVariant != 0) { throw }' to silence empty-body warning
  without breaking the NoOp path; remove redundant pagesBufOffset local
- RleEncodingDecoder: merge duplicate 'case I64, U64' switch branch
- DictEncodingEncoder: merge duplicate F16 case into I16/U16 branch in
  arrayLength() and buildUniqueArray()
- BitpackedEncodingEncoder: inline redundant wideBitWidth local variable
- ScanIterator: inline redundant 'name = col' local; unused lambda
  parameter c -> _ in decodeChunk()
- ConstantEncodingDecoder: remove unused 'ptype' parameter from
  scalarToRawBits()
- Fix broken Javadoc cross-refs (ERROR): VortexWriter removes
  cross-module ZonedStatsSchema ref; CsvImporter fixes #chunkSize →
  #chunkSize(); CascadingCompressor fixes ofDepth FQCN → simple name
- CsvImporter: getFirst() instead of get(0)
- RustWritesJavaReadsIntegrationTest: remove exhaustive-switch default
  branch, redundant (LongArray)/(DoubleArray) casts, (long) widening
- RandomArrays: unused lambda index params i → _

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>